src/tests/snapshots/synoik__tests__window_opening__check_target_size@ofT-dwU-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault column width: U\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
